--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,15 @@
   "description": "Server-side",
   "main": "main.js",
   "scripts": {
+    "dev": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Guilherme Jacob",
-  "license": "ISC"
+  "dependencies": {
+    "cors": "*",
+    "express": "*",
+    "mongoose": "*",
+    "morgan": "*",
+    "nodemon": "*",
+    "passport": "*"
+  }
 }
