Change in .gitignore file

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "contributors": [
     {
       "name": "Guilherme Jacob",
-      "email": null,
+      "email": "costa.seem@gmail.com",
       "url": "https://github.com/costaseem",
       "contributions": 1,
       "additions": 252,
